@startuml
abstract class Entite {
  - x: int
  - y: int
  - hp: double
  - maxHp: double
  - degat: double
  - enVie: boolean
  + Entite(dx: int, dy: int, maxHp: double, degat: double)
  + Entite(dx: int, dy: int)
  + etrePresent(dx: int, dy: int): boolean
  + prendreDegat(d: double): void
  + mettreDegat(cible: Entite): void
  + estMort(): boolean
}

class MonstreStatique {
  + MonstreStatique(dx: int, dy: int, hp: double, degat: double)
  + MonstreStatique(dx: int, dy: int)
}

class Labyrinthe {
  + Labyrinthe(nom: String)
}

class ZeldiabloDessin {
  - labyUI(laby: Labyrinthe, gc: GraphicsContext, canvas: Canvas): void
}

interface DessinJeu {
}


MonstreStatique --|> Entite
Labyrinthe --> "*" Entite : monstres
ZeldiabloDessin ..|> DessinJeu
ZeldiabloDessin ..> Labyrinthe : uses

hide Entite::getX
hide Entite::getY
hide Entite::setX
hide Entite::setY
hide Entite::getHp
hide Entite::getMaxHp
@enduml